Erreur "sil" corrigé + avancement fusion ACE

--- a/3362815204/localisation/Flavour_Empkeios_G53_l_french.yml
+++ b/3362815204/localisation/Flavour_Empkeios_G53_l_french.yml
@@ -19,7 +19,7 @@ l_french:
  desc_estate_burghers_slaver_independent_trading_mod: "En raison d'accorder l'indépendance commerciale aux Guildes d'Esclavagistes, cette province ne fournit pas autant de revenus à l'état qu'elle le faisait jadis."
 
  empkeios_events.2602.t: "Extension du Commerce Indépendant pour les Guildes d'Esclavagistes"
- empkeios_events.2602.d: "Les privilèges de commerce indépendant que nous avons accordés aux Guildes d'Esclavagistes ont expiré, signifiant que nous sommes maintenant capables de récupérer le revenu de notre production d'esclaves. Cependant, les Bourgeois sont désireux de garder leurs privilèges, et le capital politique à gagner en les laissant garder le monopole pour les 10 prochaines années est considérable."
+ empkeios_events.2602.d: "Les privilèges de commerce indépendant que nous avons accordés aux Guildes d'Esclavagistes ont expiré, signifiant que nous sommes maintenant capables de récupérer le revenu de notre production d'esclaves. Cependant, les [Root.GetBurghersName] sont désireux de garder leurs privilèges, et le capital politique à gagner en les laissant garder le monopole pour les 10 prochaines années est considérable."
  empkeios_events.2602.a: "Renouvelons l'accord."
  empkeios_events.2602.b: "Nous ne renouvellerons pas cela."
  empkeios_events.2602.btt: "Nous serons capables de révoquer le privilège d'état §YGuildes d'Esclavagistes : Commerce Indépendant§! ."
