--- a/3362815204/localisation/Flavour_Exwes_A40_l_french.yml
+++ b/3362815204/localisation/Flavour_Exwes_A40_l_french.yml
@@ -204,7 +204,7 @@ exwes_has_exwesser_monarchy_tt:0 "A la réforme gouvernementale §YMonarchie Exw
 #Estate modifier
 burghers_estate_exwes_wharf_trade_up:0 "Biens Navals de Haute Qualité"
 desc_burghers_estate_exwes_wharf_trade_up:0 "Une demande accrue pour des biens navals de plus haute qualité."
-unlock_privilege_estate_burghers_exwes_leading_naval_supplier_tt:0 "Activer le privilège Bourgeois '§YFournisseur Naval Principal§!' ."
+unlock_privilege_estate_burghers_exwes_leading_naval_supplier_tt:0 "Activer le privilège [Root.GetBurghersName] '§YFournisseur Naval Principal§!' ."
 estate_burghers_exwes_leading_naval_supplier:0 "Fournisseur Naval Principal"
 estate_burghers_exwes_leading_naval_supplier_desc:0 "La réputation de notre prouesse de pêche nous précède. Si nous utilisons cette réputation, les gens seront disposés à faire la queue pour les produits de nos manufactures pendant des heures."
 estate_burghers_exwes_leading_naval_supplier_effect_tt:0 "Donne 20% de pouvoir commercial local aux provinces avec poisson, sel ou fournitures navales qui ont une manufacture d'équipement naval ou bureaux d'enrôlement."
