--- a/3362815204/localisation/Flavour_Gemradcurt_H16_l_french.yml
+++ b/3362815204/localisation/Flavour_Gemradcurt_H16_l_french.yml
@@ -471,7 +471,7 @@ flavor_gemradcurt.18.t:0 "Et les Murs s'Effondrent..."
  gemradcurt_lesser_hearthwards_title:0 "Gardes-Foyer Moindres"
  gemradcurt_lesser_hearthwards_desc:0 "Les Gardes-Foyer Moindres sont, comme leur nom le suggère, une version moins puissante mais moins coûteuse des Gardes-Foyer Supérieurs. Bien qu'ils ne puissent donner à une zone pleine protection contre le froid, ils fournissent néanmoins un répit abordable pour les provinces affectées par l'Éternel-Givre."
  gemradcurt_business_as_usual_trade_modifier:0 "Affaires Comme d'Habitude"
- gemradcurt_tolerance_tt:0 "Le privilège §YCouverture de l'Hiver§! du clergé deviendra indisponible"
+ gemradcurt_tolerance_tt:0 "Le privilège §YCouverture de l'Hiver§! du [Root.GetClergyName] deviendra indisponible"
  
  #custom tooltips
  gemradcurt_truespear_shattered_tt:0 "§rLes Peitar seront purgés ! En résultat, toutes les provinces Peitar seront converties en Snecboth et Cour d'Hiver et seront dévastées.§!"
