--- a/3362815204/localisation/Flavour_VerkalOzovar_Y63_l_french.yml
+++ b/3362815204/localisation/Flavour_VerkalOzovar_Y63_l_french.yml
@@ -449,7 +449,7 @@
  Y63_new_settlement_tt: "A eu au moins §Y3§! événements de Quête du Jade."
  Y63_underground_rainwater_trigger_tt: "A promulgué le sort de mage §YProtection Étroite§!.\nLa §YProtection Runique§! fonctionne aussi."
  has_twice_our_development_tt: "A 3 fois notre développement."
- Y63_unlock_patronate_estate_tt: "Le Domaine §YNobles§! est renommé en §YPatronats§!"
+ Y63_unlock_patronate_estate_tt: "Le Domaine §Y[Root.GetNobilityName]§! est renommé en §YPatronats§!"
  Y63_king_of_kai_effect_tt: "Nos patronats gagnent des revendications permanentes sur toutes les provinces de leur culture principale."
  Y63_unlocked_minor_runes_tt: "Peut maintenant utiliser les §SRunes Mineures§!, accessibles depuis le menu §YMagie de Domaine§!."
  Y63_unlocked_grand_runes_tt: "Peut maintenant utiliser les §SGrandes Runes§!"
