--- a/3362815204/localisation/Flavour_khatalashya_S81_l_french.yml
+++ b/3362815204/localisation/Flavour_khatalashya_S81_l_french.yml
@@ -763,9 +763,9 @@
  estate_church_complete_naga_dominance: "Domination Naga Complète"
  estate_church_complete_naga_dominance_desc: "Les nagas et l'État ne font qu'un. Là où l'État se déplace, les nagas suivent. Là où les nagas se déplacent, l'État suit. Bien que cela donne beaucoup de pouvoir aux nagas, cela limite curieusement leur capacité à défier l'État. Les nagas sont l'État et il n'y a aucun intérêt à se défier soi-même."
  estate_church_naga_administrative_privileges: "Concentration Cléricale Interne"
- estate_church_naga_administrative_privileges_desc: "Le clergé a parlé. Il semble dédaigner l'expansion de l'État par des moyens militaires et souhaite couvrir la bureaucratie de l'État afin d'étendre nos capacités par d'autres moyens."
+ estate_church_naga_administrative_privileges_desc: "Le [Root.GetClergyName] a parlé. Il semble dédaigner l'expansion de l'État par des moyens militaires et souhaite couvrir la bureaucratie de l'État afin d'étendre nos capacités par d'autres moyens."
  estate_church_rayaz_delegates_of_the_prophecy_get_upgraded_333: "Délégués de la Prophétie"
- estate_church_rayaz_delegates_of_the_prophecy_get_upgraded_333_desc: "Le clergé a parlé. Il semble dédaigner l'expansion de l'État par des moyens militaires et souhaite couvrir la bureaucratie de l'État afin d'étendre nos capacités par d'autres moyens."
+ estate_church_rayaz_delegates_of_the_prophecy_get_upgraded_333_desc: "Le [Root.GetClergyName] a parlé. Il semble dédaigner l'expansion de l'État par des moyens militaires et souhaite couvrir la bureaucratie de l'État afin d'étendre nos capacités par d'autres moyens."
  estate_church_laws_of_the_nagas: "Lois des Nagas"
  estate_church_laws_of_the_nagas_desc: "Toutes les provinces avec un §YTribunal§! ou un §YHôtel de Ville§! obtiennent §G-5%§! de Coût de Développement Local.\n\nLes nagas vivent bien plus longtemps que les hommes-lézards normaux, et il faut la durée de vie d'un naga pour apprendre ne serait-ce qu'une fraction des lois complexes gouvernant Khatalashya. Les nagas qui s'élèvent à des postes supérieurs en droit portent un couvre-chef spécial tissé de paille blanche avec des boucles à chaque extrémité."
  estate_noble_dashirik_mutation: "Dashirik"
