--- a/3362815204/localisation/powers_and_ideas_l_french.yml
+++ b/3362815204/localisation/powers_and_ideas_l_french.yml
@@ -7201,7 +7201,7 @@
  ideagroups.2013.d:0 "Bien qu'elle ait commencé de manière très prometteuse, l'assemblée du Grand État de cette année est un désastre complet. L'organisation de la cour n'était pas minutieuse et de nombreux invités qui ont des vendettas les uns contre les autres ont été invités dans la même salle. Le [Root.Monarch.GetTitle] n'a pas reçu d'attention car les puissants et influents des états étaient trop occupés par leurs propres querelles mesquines."
  ideagroups.2013.a:0 "Quel fiasco"
  ideagroups.2014.t:0 "Refuge d'un Noble [noble_origin_country.GetAdjective]"
- ideagroups.2014.d:0 "Tous les membres de la noblesse ne vivent pas aussi bien que les Nobles. Un noble étranger, sa famille et ses serviteurs, ont été exilés du [noble_origin_country.GovernmentName] de [noble_origin_country.GetUsableName]. Les raisons de son bannissement nous sont mystérieuses car il demande sanctuary à notre cour."
+ ideagroups.2014.d:0 "Tous les membres de la noblesse ne vivent pas aussi bien que les [Root.GetNobilityName]. Un noble étranger, sa famille et ses serviteurs, ont été exilés du [noble_origin_country.GovernmentName] de [noble_origin_country.GetUsableName]. Les raisons de son bannissement nous sont mystérieuses car il demande sanctuary à notre cour."
  ideagroups.2014.a:0 "Accordons-lui sa requête"
  ideagroups.2014.a.tt:0 "Le noble mystérieux deviendra partie de la cour royale."
  ideagroups.2014.b:0 "Rejetons-le"
