--- a/3362815204/localisation/prov_names_l_french.yml
+++ b/3362815204/localisation/prov_names_l_french.yml
@@ -61,10 +61,10 @@
  PROV60:0 "Marais-Salé-Oriental"
  PROV61:0 "Lorenith"
  PROV62:0 "Fort-de-Rubis"
- PROV63:0 "Viswall-Sud"
+ PROV63:0 "Mur-de-Vis Sud"
  PROV64:0 "Porte-Rouge"
  PROV65:0 "Porte-de-la-Rivière"
- PROV66:0 "Viswall-Nord"
+ PROV66:0 "Mur-de-Vis Nord"
  PROV67:0 "Lorentaine"
  PROV68:0 "Fort-Rouge"
  PROV69:0 "Fourche-de-Rewan"
@@ -137,7 +137,7 @@
  PROV136:0 "Grand-Blé"
  PROV137:0 "Garde-des-Vaches"
  PROV138:0 "Débarquement-du-Pilleur"
- PROV139:0 "Pommeraie"
+ PROV139:0 "Bourg-des-Pommes"
  PROV140:0 "Pointe-de-la-Tempête"
  PROV141:0 "Puits-du-Tournant"
  PROV142:0 "Iochand"
