--- a/3362815204/localisation/Flavour_Karakhanbar_Z54_l_french.yml
+++ b/3362815204/localisation/Flavour_Karakhanbar_Z54_l_french.yml
@@ -90,9 +90,9 @@
  estate_burghers_karakhanbar_cooperation_with_goblin_cartels_desc:0 " "
  estate_burghers_karakhanbar_cartels_recruit_ministers_title:0 "Recruter un Ministre Gobelin"
  estate_burghers_karakhanbar_cartels_recruit_ministers_desc:0 "Les gobelins des Bois-Profonds se syndicalisent souvent en soi-disant Cartels. Bien qu'ils ne soient pas exactement utiles sur le champ de bataille, grâce à leurs compétences en conversation et en marchandage, nous pouvons obtenir une ressource précieuse."
- enable_estate_action_KARAKHANBAR_CARTELS_RECRUIT_MINISTER_BURGHERS_tt:0 "[Root.EnableEstateDecisionText] §Y[GetBourgeois] : Recruter un Ministre Gobelin§!"
- disable_estate_action_KARAKHANBAR_CARTELS_RECRUIT_MINISTER_BURGHERS_tt:0 "[Root.DisableEstateDecisionText] §Y[GetBourgeois] : Recruter un Ministre Gobelin§!"
- has_enabled_estate_action_KARAKHANBAR_CARTELS_RECRUIT_MINISTER_BURGHERS_tt:0 "[Root.HasEstateDecisionText] §YBourgeois : Recruter un Ministre Gobelin§!"
+ enable_estate_action_KARAKHANBAR_CARTELS_RECRUIT_MINISTER_BURGHERS_tt:0 "[Root.EnableEstateDecisionText] §Y[GetBurghersName] : Recruter un Ministre Gobelin§!"
+ disable_estate_action_KARAKHANBAR_CARTELS_RECRUIT_MINISTER_BURGHERS_tt:0 "[Root.DisableEstateDecisionText] §Y[GetBurghersName] : Recruter un Ministre Gobelin§!"
+ has_enabled_estate_action_KARAKHANBAR_CARTELS_RECRUIT_MINISTER_BURGHERS_tt:0 "[Root.HasEstateDecisionText] §Y[Root.GetBurghersName] : Recruter un Ministre Gobelin§!"
 
  estate_church_karakhanbar_zealous_feyslayers:0 "Tueurs de Féériques Zélés"
  estate_church_karakhanbar_zealous_feyslayers_desc:0 "Tueurs de Féériques Zélés"
@@ -100,7 +100,7 @@
  estate_noble_monopoly_of_fuel:0 "Monopole sur le Combustible"
  estate_noble_monopoly_of_fuel_desc:0 " "
  estate_noble_monopoly_of_fuel_mod:0 "Monopole Nobiliaire sur le Combustible"
- desc_estate_noble_monopoly_of_fuel_mod:0 "L'État a accordé aux [Root.Owner.GetNobles] les droits de monopole sur la production de combustible."
+ desc_estate_noble_monopoly_of_fuel_mod:0 "L'État a accordé aux [Root.Owner.GetNobilityName] les droits de monopole sur la production de combustible."
  estate_noble_monopoly_of_fuel_revoke_tooltip:0 " "
 
  estate_karakhanbar_artificers:0 "Gakaran-a Kuru"
@@ -501,7 +501,7 @@ flavour_karakhanbar.53.t:0 "Attaqué par les Cultistes Féeriques"
  flavour_karakhanbar.82.a:0 ""
 
  monopoly_privileges.20.t:0 "Extension du Monopole du Combustible"
- monopoly_privileges.20.d:0 "Le monopole sur l'encens que nous avons accordé aux Nobles a expiré, ce qui signifie que nous pouvons maintenant récupérer les revenus de la production de métaux. Cependant, les Nobles tiennent à conserver leurs privilèges et proposent de nous payer une somme forfaitaire en échange de la garantie du monopole pour 10 années supplémentaires."
+ monopoly_privileges.20.d:0 "Le monopole sur l'encens que nous avons accordé aux [Root.GetNobilityName] a expiré, ce qui signifie que nous pouvons maintenant récupérer les revenus de la production de métaux. Cependant, les [Root.GetNobilityName] tiennent à conserver leurs privilèges et proposent de nous payer une somme forfaitaire en échange de la garantie du monopole pour 10 années supplémentaires."
  monopoly_privileges.20.b.tooltip:0 "Nous pourrons révoquer le privilège d'état '§YMonopole sur le Combustible§!'."
 
 #Missions Custom Tooltips and Event Insights
@@ -576,7 +576,7 @@ flavour_karakhanbar.53.t:0 "Attaqué par les Cultistes Féeriques"
 
  karakhanbar_turn_their_magic_effect_tt:0 "Chaque province de §YPassage Féerique§! :"
  
- karakhanbar_to_reach_for_resources_effect_tt:0 "Débloque le Privilège d'État '§YMonopole sur le Combustible§!' pour les §YNobles§!, nous permettant d'accorder un monopole à l'état en question, tout en augmentant le §YFeu du Foyer Mensuel§! !"
+ karakhanbar_to_reach_for_resources_effect_tt:0 "Débloque le Privilège d'État '§YMonopole sur le Combustible§!' pour les §Y[Root.GetNobilityName]§!, nous permettant d'accorder un monopole à l'état en question, tout en augmentant le §YFeu du Foyer Mensuel§! !"
 
  karakhanbar_spread_the_songs_effect_bulgu_tt:0 "Les Chants de Bron le Brasier seront maintenant disponibles pour nos shamans, qui peuvent apprendre d'eux. D'autres communautés Bulgu Orazan n'accepteront probablement pas Bron comme l'un des Bulgus."
  karakhanbar_spread_the_songs_effect_dookanist_tt:0 "Débloque l'action religieuse Dookaniste '§YBénir le Brasier Noir§!' !"
@@ -619,7 +619,7 @@ flavour_karakhanbar.53.t:0 "Attaqué par les Cultistes Féeriques"
 
  karakhanbar_history_of_ashentree_effect_tt:0 "L'influence féerique dans les §YBois-Profonds§! disparaîtra, arrêtant les événements de §YNuisance Féerique§!"
 
- karakhanbar_new_model_smithing_effect_monopoly_tt:0 "Améliore le Privilège d'État '§YMonopole sur le Combustible§!' pour les §YNobles§!, nous permettant de récolter §G10§! années de revenus à la place"
+ karakhanbar_new_model_smithing_effect_monopoly_tt:0 "Améliore le Privilège d'État '§YMonopole sur le Combustible§!' pour les §Y[Root.GetNobilityName]§!, nous permettant de récolter §G10§! années de revenus à la place"
 
  karakhanbar_a_modern_orcish_state_effect_tt:0 "Gagne §G50%§! de chance de ne pas perdre de §YDéveloppement de Base§! lors de l'Exploitation\n\nLes citoyens de §YKarakhanbar§! vivent dans des temps plus éclairés, ce qui empêche l'événement '§YComète Aperçue§!' de se déclencher."
 
