--- a/3362815204/localisation/generic_events_l_french.yml
+++ b/3362815204/localisation/generic_events_l_french.yml
@@ -1326,8 +1326,8 @@
  EVTDESC5045:1 "Nos politiques évoquent un mécontentement répandu parmi le peuple et la noblesse. Il semble qu'elles soient mal interprétées d'une façon contraire à nos intentions, au point que nos opposants les brandissent comme preuve de la mauvaise volonté du gouvernement et du manque d'intérêt pour le bien-être du royaume."
  EVTOPTA5045:0 "Nous avons choisi la bonne voie."
  EVTOPTB5045:0 "Tenter d'améliorer la situation."
- EVTNAME5050:0 "Mécontentement Parmi le clergé"
- EVTDESC5050:1 "Les opinions et intérêts divergents sur les questions religieuses et séculières entre notre gouvernement et le clergé ont débordé et sont devenus une source significative de conflit. Le clergé fait maintenant des demandes de changements de politique, faute de quoi il retirera son soutien au [Root.GetRulerTitleOrRegency]."
+ EVTNAME5050:0 "Mécontentement Parmi le [Root.GetClergyName]"
+ EVTDESC5050:1 "Les opinions et intérêts divergents sur les questions religieuses et séculières entre notre gouvernement et le [Root.GetClergyName] ont débordé et sont devenus une source significative de conflit. Le [Root.GetClergyName] fait maintenant des demandes de changements de politique, faute de quoi il retirera son soutien au [Root.GetRulerTitleOrRegency]."
  EVTOPTA5050:0 "Ignorer leurs demandes."
  EVTOPTB5050:0 "Accepter leurs demandes."
  EVTNAME5051:0 "Mécontentement Parmi les Artisans"
@@ -1359,7 +1359,7 @@
  EVTOPTA5057:0 "C'est de la plus haute importance."
  EVTOPTB5057:0 "C'est trop cher."
  EVTNAME5058:0 "Les Nobles Demandent des Privilèges"
- EVTDESC5058:0 "Les privilèges du Nobles ont été sous assaut continu alors que $MONARCH$ a tenté de centraliser de plus en plus de contrôle. Les nobles ont finalement perdu patience et demandent qu'on leur rende ce qu'ils croient être légitimement leur."
+ EVTDESC5058:0 "Les privilèges du [Root.GetNobilityName] ont été sous assaut continu alors que $MONARCH$ a tenté de centraliser de plus en plus de contrôle. Les nobles ont finalement perdu patience et demandent qu'on leur rende ce qu'ils croient être légitimement leur."
  EVTOPTA5058:0 "Accepter leurs revendications légitimes."
  EVTOPTB5058:0 "Ignorer leurs demandes."
  EVTNAME5059:0 "La Bulle de la Compagnie Commerciale Éclate"
@@ -1380,7 +1380,7 @@
  EVTOPTB5063:0 "Les laisser se battre."
  EVTOPTC5063:0 "Essayer de régler la question."
  EVTNAME5064:0 "Les Nobles s'Allient avec une Puissance Étrangère"
- EVTDESC5064:1 "Le Nobles se révèle souvent être des sujets indisciplinés du [Root.Monarch.GetTitle], cherchant à résister à toute atteinte à leur autonomie et saisissant toute opportunité de renforcer leur position. Cela inclut souvent de faire cause commune avec des puissances étrangères. Récemment, plusieurs figures clés semblent avoir conclu un accord avec [neighbour_country.GetUsableName] pour prôner un cours d'action pro-[neighbour_country.GetAdjective] en retour de certaines faveurs et promesses. Bien que pas directement traître, ce comportement est clairement nuisible à nos intérêts ; cependant, les freiner se révèlera probablement pas facile."
+ EVTDESC5064:1 "Le [Root.GetNobilityName] se révèle souvent être des sujets indisciplinés du [Root.Monarch.GetTitle], cherchant à résister à toute atteinte à leur autonomie et saisissant toute opportunité de renforcer leur position. Cela inclut souvent de faire cause commune avec des puissances étrangères. Récemment, plusieurs figures clés semblent avoir conclu un accord avec [neighbour_country.GetUsableName] pour prôner un cours d'action pro-[neighbour_country.GetAdjective] en retour de certaines faveurs et promesses. Bien que pas directement traître, ce comportement est clairement nuisible à nos intérêts ; cependant, les freiner se révèlera probablement pas facile."
  EVTOPTA5064:0 "Ils paieront pour leur trahison."
  EVTOPTB5064:0 "Nous nous occuperons d'eux plus tard."
  EVTNAME5065:0 "Assassinat d'un Noble"
@@ -1388,7 +1388,7 @@
  EVTOPTA5065:0 "Les laisser résoudre cela entre eux."
  EVTOPTB5065:0 "Prendre le contrôle de la situation."
  EVTNAME5066:0 "Cessation des Fonctions de l'Église"
- EVTDESC5066:1 "Plusieurs membres du Nobles sont venus devant le [Root.GetRulerTitleOrRegency] avec une proposition. Désespérés pour plus de terres et titres, ils regardent avec envie vers le clergé, qui possède des terres considérables. Ils demandent que nous transférions les terres de l'église vers eux en retour d'une grande contribution en espèces aux efforts du [Root.GetStateForm]. Bien sûr, à long terme, nous perdrions les revenus fiscaux des terres de l'église en retour de cette augmentation à court terme des revenus."
+ EVTDESC5066:1 "Plusieurs membres du [Root.GetNobilityName] sont venus devant le [Root.GetRulerTitleOrRegency] avec une proposition. Désespérés pour plus de terres et titres, ils regardent avec envie vers le [Root.GetClergyName], qui possède des terres considérables. Ils demandent que nous transférions les terres de l'église vers eux en retour d'une grande contribution en espèces aux efforts du [Root.GetStateForm]. Bien sûr, à long terme, nous perdrions les revenus fiscaux des terres de l'église en retour de cette augmentation à court terme des revenus."
  EVTOPTA5066:0 "Accepter."
  EVTOPTB5066:0 "Décliner."
  EVTNAME5068:0 "Vente de Charges"
@@ -1428,8 +1428,8 @@
  EVTDESC5077:1 "Bien que le [Root.Monarch.GetTitle] émette beaucoup d'ordonnances, [Root.Monarch.GetSheHe] est en pratique presque impuissant à les faire appliquer. À la place, l'application dépend des pouvoirs locaux - noblesse régionale et gouvernements de ville - qui ne sont pas toujours aussi vigilants qu'on le souhaiterait. Récemment, il nous est venu à l'attention que nos autorités dans [troublesome_province.GetAreaName] sont particulièrement réticentes à faire appliquer la volonté du [Root.Monarch.GetTitle]."
  EVTOPTA5077:0 "Les laisser s'en occuper."
  EVTOPTB5077:0 "Augmenter les tentatives !"
- EVTNAME5082:1 "Les Bourgeois Demandent des Privilèges"
- EVTDESC5082:1 "Les Bourgeois sont devenus de plus en plus ressentis du pouvoir des familles nobles et particulièrement de leur manque d'opportunités dans les rangs supérieurs du gouvernement. Leur seule route vers le pouvoir est de se marier dans des familles nobles pauvres mais bien titrées, ou d'ouvrir de force des positions dans les cercles gouvernementaux en demandant de plus grands privilèges au [Root.GetRulerTitleOrRegency]."
+ EVTNAME5082:1 "Les [Root.GetBurghersName] Demandent des Privilèges"
+ EVTDESC5082:1 "Les [Root.GetBurghersName] sont devenus de plus en plus ressentis du pouvoir des familles nobles et particulièrement de leur manque d'opportunités dans les rangs supérieurs du gouvernement. Leur seule route vers le pouvoir est de se marier dans des familles nobles pauvres mais bien titrées, ou d'ouvrir de force des positions dans les cercles gouvernementaux en demandant de plus grands privilèges au [Root.GetRulerTitleOrRegency]."
  EVTOPTA5082:0 "Leur accorder des privilèges."
  EVTOPTB5082:0 "Leur refuser des privilèges."
  EVTNAME5083:0 "Ingénieur Italien Disponible"
@@ -1457,7 +1457,7 @@
  EVTOPTA5088:0 "Escalader la plainte."
  EVTOPTB5088:0 "Chercher une solution diplomatique."
  EVTNAME5089:0 "Pétition pour Réparation"
- EVTDESC5089:1 "L'un des Nobles locaux dans [uppity_peasants_province.GetName] a tellement bouleversé et maltraité ses sujets qu'une délégation de paysans est venue devant le [Root.GetRulerTitleOrRegency] pour demander réparation. Accepter ceci serait populaire auprès de la paysannerie mais serait vu comme une atteinte à leur autorité par le Nobles."
+ EVTDESC5089:1 "L'un des [Root.GetNobilityName] locaux dans [uppity_peasants_province.GetName] a tellement bouleversé et maltraité ses sujets qu'une délégation de paysans est venue devant le [Root.GetRulerTitleOrRegency] pour demander réparation. Accepter ceci serait populaire auprès de la paysannerie mais serait vu comme une atteinte à leur autorité par le [Root.GetNobilityName]."
  EVTOPTA5089:0 "Accepter la pétition."
  EVTOPTB5089:0 "Refuser la pétition."
  EVTNAME5090:0 "Famille Noble Demande de l'Aide"
@@ -1477,7 +1477,7 @@
  EVTOPTA5093:1 "Le renvoyer !"
  EVTOPTB5093:1 "Nous avons foi en [Root.Dip_Advisor.GetHerHim]."
  EVTNAME5094:0 "Conseiller Hérétique"
- EVTDESC5094:1 "Le clergé est outragé qu'un hérétique, notre [Root.GetEventAdvisorTitle] [Root.GetEventAdvisorName], soit employé comme conseiller au [Root.Monarch.GetTitle]. Il demande son destitution immédiate !"
+ EVTDESC5094:1 "Le [Root.GetClergyName] est outragé qu'un hérétique, notre [Root.GetEventAdvisorTitle] [Root.GetEventAdvisorName], soit employé comme conseiller au [Root.Monarch.GetTitle]. Il demande son destitution immédiate !"
  EVTOPTA5094:1 "Le renvoyer !"
  EVTOPTB5094:1 "Nous avons foi en [Root.GetEventAdvisorHerHim]."
  EVTNAME5095:0 "L'Homme d'État Gagne du Pouvoir"
@@ -1492,8 +1492,8 @@
  EVTDESC5097:1 "Nos efforts pour maintenir les paysans à leur place ont été quelque peu trop réussis ces derniers temps. Si dure est notre règle, en fait, que les démunis deviennent de plus en plus vocaux dans leurs plaintes et se retournent contre leurs propriétaires, demandant un meilleur traitement et de meilleures conditions."
  EVTOPTA5097:0 "Faire appliquer le servage."
  EVTOPTB5097:0 "Ces choses arrivent."
- EVTNAME5098:0 "Corruption parmi le clergé"
- EVTDESC5098:1 "Le clergé est censé être incorruptible - après tout, c'est ce qu'il prêche. Cependant, il semble qu'il ne soit pas toujours à la hauteur de ses propres enseignements. Un scandale a éclaté entourant plusieurs de ses figures dirigeantes, qui au lieu de fournir à notre peuple une guidance spirituelle honnête semblent s'être rendus obscènement riches à travers diverses affaires douteuses sur une période prolongée."
+ EVTNAME5098:0 "Corruption parmi le [Root.GetClergyName]"
+ EVTDESC5098:1 "Le [Root.GetClergyName] est censé être incorruptible - après tout, c'est ce qu'il prêche. Cependant, il semble qu'il ne soit pas toujours à la hauteur de ses propres enseignements. Un scandale a éclaté entourant plusieurs de ses figures dirigeantes, qui au lieu de fournir à notre peuple une guidance spirituelle honnête semblent s'être rendus obscènement riches à travers diverses affaires douteuses sur une période prolongée."
  EVTOPTA5098:0 "Purifier le temple."
  EVTOPTB5098:0 "Donner une amende aux pécheurs."
  EVTNAME5099:0 "Fractures Marchandes"
@@ -2849,8 +2849,8 @@
  EVTNAME873:0 "Une récolte abondante"
  EVTDESC873:1 "Les récoltes de cette année ont été exceptionnelles ! Rarement dans l'histoire de notre nation la terre a produit autant de sa générosité. La populace interprète déjà cela comme un signe de faveur divine pour notre règne."
  EVTOPTA873:0 "Nous sommes bénis !"
- EVTNAME874:0 "Tensions entre Nobles et clergé"
- EVTDESC874:0 "Dans notre nation deux castes détiennent un grand pouvoir : les Nobles et le clergé. Cependant, ils ne s'entendent pas toujours. Récemment, un baron dans [rebel_province.GetName] et le monastère local de son fief ont commencé à se quereller sur qui possède un assez grand morceau de terre.\n\nCes jours-ci, la cour royale est submergée de gens jacassant sur le droit divin - les Nobles revendiquant leur droit divin à gouverner la terre par nature d'être ceux qui gouvernent, donc étant justes aux yeux de Corin, et le clergé affirmant leur position que les dirigeants justes doivent continuellement se prouver dignes. Toute la situation devient plutôt instable (et théologiquement confuse) avec le baron en question incitant les autres nobles contre le clergé et questionnant leur droit à détenir toute sorte de propriété temporelle. Les clercs du monastère ont rallié des croisés corinites zélés de leur côté, qui réclament de combattre une telle injustice flagrante si vous décidez de prendre le parti des Nobles. Maintenant, que ferons-nous, mon suzerain ?"
+ EVTNAME874:0 "Tensions entre [Root.GetNobilityName] et [Root.GetClergyName]"
+ EVTDESC874:0 "Dans notre nation deux castes détiennent un grand pouvoir : les [Root.GetNobilityName] et le [Root.GetClergyName]. Cependant, ils ne s'entendent pas toujours. Récemment, un baron dans [rebel_province.GetName] et le monastère local de son fief ont commencé à se quereller sur qui possède un assez grand morceau de terre.\n\nCes jours-ci, la cour royale est submergée de gens jacassant sur le droit divin - les [Root.GetNobilityName] revendiquant leur droit divin à gouverner la terre par nature d'être ceux qui gouvernent, donc étant justes aux yeux de Corin, et le [Root.GetClergyName] affirmant leur position que les dirigeants justes doivent continuellement se prouver dignes. Toute la situation devient plutôt instable (et théologiquement confuse) avec le baron en question incitant les autres nobles contre le [Root.GetClergyName] et questionnant leur droit à détenir toute sorte de propriété temporelle. Les clercs du monastère ont rallié des croisés corinites zélés de leur côté, qui réclament de combattre une telle injustice flagrante si vous décidez de prendre le parti des [Root.GetNobilityName]. Maintenant, que ferons-nous, mon suzerain ?"
  EVTOPTA874:0 "Jésus a vécu parmi les mendiants et les pêcheurs, pourquoi pas vous ?"
  EVTOPTB874:0 "Sûrement nous ne souhaitons pas irriter sa sainteté."
  EVTNAME875:0 "La pucelle de $CAPITAL_CITY$"
@@ -3890,7 +3890,7 @@
  random_event.EVTDESC13:0 "Mon $MONARCHTITLE$, un nombre inhabituel de nobles et marchands de tout le monde islamique ont fait leur pèlerinage à La Mecque cette année. Le trafic accru de ces personnes riches a stimulé le commerce local ! Comment devrions-nous collecter les taxes ?"
  random_event.EVTOPTA13:0 "L'envoyer à mes coffres."
  random_event.EVTOPTB13:0 "Investir dans les magasins locaux."
- random_event.EVTOPTC13:0 "L'envoyer au clergé."
+ random_event.EVTOPTC13:0 "L'envoyer au [Root.GetClergyName]."
  random_event.EVTNAME14:0 "Une Performance Étonnante"
  random_event.EVTDESC14:1 "Récemment, une jeune troubadour appelée [Root.female_troubadour.GetName] qui a gagné la célébrité à travers Cannor pour sa musique non conventionnelle a été invitée à se produire à votre cour. La vue de son costume a provoqué le halètement de toute la salle. Ses chansons avaient d'innombrables instances d'insinuations à peine déguisées et de références à des actes sexuels non conventionnels - à un moment le prêtre de la cour est devenu écarlate et a quitté la salle en trombe. La performance s'est conclue, tous les yeux se tournent vers vous pour entendre votre réponse."
  random_event.EVTOPTA14:0 "Commentaire provocateur et fascinant sur la romance et le genre dans la société contemporaine !"
